First commit of yihui-work

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,15 +1,21 @@
 ---
+import Sidebar from "../layouts/Sidebar.astro";
+import Content from "../layouts/Content.astro";
+import "../styles/global.css";
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Yihui Hu</title>
+  </head>
+  <body>
+    <div>
+      <Sidebar />
+      <Content />
+    </div>
+  </body>
 </html>
