--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,5 @@
+@use 'base';
+
 /* Box sizing rules */
 *,
 *::before,
@@ -17,6 +19,16 @@ blockquote,
 dl,
 dd {
   margin: 0;
+}
+
+p,
+a,
+li,
+div {
+  &::selection {
+    color: base.$gray-bg;
+    background-color: base.$gray-content;
+  }
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
