--- a/src/layouts/Sidebar.astro
+++ b/src/layouts/Sidebar.astro
@@ -38,7 +38,7 @@ import Reading from "../components/Reading.astro";
         href="https://www.behance.net/gallery/131908045/Printvetica?locale=en_US"
         target="_blank">Printvetica</a
       >. View the source code <a
-        href="https://github.com/yihui-hu/yihui-work"
+        href="https://github.com/yihui-hu/yihui-hu.github.io"
         target="_blank">here</a
       >.
     </p>
