--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,3 +1,7 @@
 /* Colors */
 $gray-bg: #F9F9F9;
 $gray-content: #B2B2B2;
+$blue-bg: #B2E3FF;
+$blue-text: #005C90;
+$orange-bg: #FFE5B2;
+$orange-text: #D86800;
