--- a/src/layouts/Sidebar.astro
+++ b/src/layouts/Sidebar.astro
@@ -7,7 +7,7 @@ import Reading from "../components/Reading.astro";
 ---
 
 <div class="sidebar-container">
-  <p class="name">Yihui Hu</p>
+  <p class="name"><a class="name-link" href="/">Yihui Hu</a></p>
   <div class="about-container">
     <p class="about-blurb">
       I like to design and program. Currently studying Computer Science at
