--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Sidebar from "../layouts/Sidebar.astro";
-import Content from "../layouts/Content";
+import Content from "../components/Content";
 import "../styles/global.scss";
 import "../styles/index.scss";
 ---
