--- a/src/components/ListeningTo.astro
+++ b/src/components/ListeningTo.astro
@@ -6,7 +6,7 @@ import "../styles/listeningTo.scss";
 <div id="track-wrapper">
   <p class="header">I'm listening to:</p>
   <div id="track-container">
-    <a id="track-link" href="" target="_blank">
+    <a id="track-link" href="https://open.spotify.com/user/notyihui" target="_blank">
       <img
         id="track-art"
         src="/assets/placeholders/placeholder-track-art.png"
