--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -94,6 +94,7 @@ div [id^="user-content-fnref-"] {
 
 .image-container img {
   margin-block: 20px;
+  width: 100%;
 }
 
 .article-container video {
