--- a/src/layouts/Article.astro
+++ b/src/layouts/Article.astro
@@ -3,7 +3,7 @@ import Sidebar from "./Sidebar.astro";
 import "../styles/global.scss";
 import "../styles/index.scss";
 import "../styles/article.scss";
-import '@fontsource-variable/inter';
+import "@fontsource-variable/inter";
 const { frontmatter } = Astro.props;
 ---
 
@@ -12,6 +12,9 @@ const { frontmatter } = Astro.props;
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="“theme-color”" content="“#000000”" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="generator" content={Astro.generator} />
     <title>{frontmatter.title}</title>
   </head>
