Status bar black on articles

--- a/src/layouts/Article.astro
+++ b/src/layouts/Article.astro
@@ -10,12 +10,10 @@ const { frontmatter } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#000000" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
-    <meta name="“theme-color”" content="“#000000”" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="generator" content={Astro.generator} />
     <title>{frontmatter.title}</title>
   </head>
   <body>
