--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -12,6 +12,7 @@
   font-size: 15px;
   padding-block: 30px;
   padding-inline: 40px;
+  min-height: 100vh;
   height: 100vh;
   overflow-y: scroll;
   scroll-behavior: smooth;
@@ -102,9 +103,14 @@ div [id^="user-content-fnref-"] {
 }
 
 @media screen and (max-width: 864px) {
+  #sidebar {
+    display: none;
+  }
+
   .article-container {
     padding: 15px;
     height: auto;
+    min-height: 100vh
   }
 
   .article-container video {
