Updated mobile vs desktop and navigation

--- a/src/layouts/Article.astro
+++ b/src/layouts/Article.astro
@@ -22,9 +22,12 @@ const { frontmatter } = Astro.props;
   <body id="article-body">
     <div class="index-container">
       <div id="sidebar">
-        <Sidebar/>
+        <Sidebar />
       </div>
       <div class="article-container">
+        <div class="back-button">
+          <p class="back-button"><a href="/">Home</a></p>
+        </div>
         <slot />
       </div>
     </div>
