--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -102,6 +102,10 @@ div [id^="user-content-fnref-"] {
   width: 80%;
 }
 
+.back-button {
+  display: none;
+}
+
 @media screen and (max-width: 864px) {
   #sidebar {
     display: none;
@@ -115,5 +119,19 @@ div [id^="user-content-fnref-"] {
 
   .article-container video {
     width: 100%;
+  }
+
+  .back-button {
+    display: block;
+    position: fixed;
+    right: 15px;
+    top: 15px;
+  }
+
+  .back-button p {
+    font-family: "Inter Variable", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
+    color: rgb(223, 223, 223);
   }
 }
