Added black background to home button on articles

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -133,5 +133,8 @@ div [id^="user-content-fnref-"] {
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
     color: rgb(223, 223, 223);
+    background-color: black;
+    padding-left: 10px;
+    padding-block: 5px;
   }
 }
