--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,14 +11,13 @@ import "../styles/index.scss";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="description" content="Yihui Hu personal site">
     <title>Yihui Hu</title>
   </head>
   <body>
     <div class={"index-container"}>
       <Sidebar />
-      <div style={{ height: "100vh" }}>
-        <Content client:only="react" />
-      </div>
+      <Content client:only="react" />
     </div>
   </body>
 </html>
