Manual update currently

--- a/src/layouts/Sidebar.astro
+++ b/src/layouts/Sidebar.astro
@@ -8,9 +8,8 @@ import Reading from "../components/Reading.astro";
 
 <div class="sidebar-container">
   <p class="name">
-    <a class="name-link" href="/">
-      Yihui Hu
-    </a>
+    <a class="name-link" href="/">Yihui Hu</a>
+    <a class="about-link" href="/about">About</a>
   </p>
   <div class="about-container">
     <p class="about-blurb">
@@ -43,13 +42,13 @@ import Reading from "../components/Reading.astro";
         href="https://fonts.google.com/specimen/Fragment+Mono"
         target="_blank">Fragment Mono</a
       > and <a
-        href="https://www.behance.net/gallery/131908045/Printvetica?locale=en_US"
-        target="_blank">Printvetica</a
+        href="https://fonts.google.com/specimen/Inter"
+        target="_blank">Inter</a
       >. View the source code <a
         href="https://github.com/yihui-hu/yihui-hu.github.io"
         target="_blank">here</a
       >.
     </p>
   </div>
-  <p>Last updated: 10 Jun 2023 7:31pm EST</p>
+  <p>Last updated: 15 Jun 2023 10:53pm EST</p>
 </div>
