Fixed about gif

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -22,7 +22,7 @@ import "../../styles/about.scss";
           <p>Me</p>
           <div>
           <img
-            src="../../../public/assets/about/toe-recreation.gif"
+            src="/assets/about/toe-recreation.gif"
             style={{
               filter: "grayscale(100)",
               borderRadius: "8px",
