Testing container height styling

--- a/src/layouts/Sidebar.astro
+++ b/src/layouts/Sidebar.astro
@@ -50,5 +50,5 @@ import Reading from "../components/Reading.astro";
       >.
     </p>
   </div>
-  <p>Last updated: 15 Jun 2023 10:53pm EST</p>
+  <p class="last-updated">Last updated: 15 Jun 2023 10:53pm EST</p>
 </div>
