--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -11,6 +11,7 @@
   scroll-behavior: smooth;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
   height: 100vh;
   gap: 55px;
 }
@@ -51,6 +52,7 @@
 
   .about-page-container {
     padding: 15px;
+    min-height: auto;
     height: auto;
   }
 
